sys/src/bindings/i686-unknown-linux-gnu.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSClassExoticMethods"][::std::mem::size_of::<JSClassExoticMethods>() - 28usize];
    ["Alignment of JSClassExoticMethods"][::std::mem::align_of::<JSClassExoticMethods>() - 4usize];
    ["Offset of field: JSClassExoticMethods::get_own_property"]
        [::std::mem::offset_of!(JSClassExoticMethods, get_own_property) - 0usize];
    ["Offset of field: JSClassExoticMethods::get_own_property_names"]
        [::std::mem::offset_of!(JSClassExoticMethods, get_own_property_names) - 4usize];
    ["Offset of field: JSClassExoticMethods::delete_property"]
        [::std::mem::offset_of!(JSClassExoticMethods, delete_property) - 8usize];
    ["Offset of field: JSClassExoticMethods::define_own_property"]
        [::std::mem::offset_of!(JSClassExoticMethods, define_own_property) - 12usize];
    ["Offset of field: JSClassExoticMethods::has_property"]
        [::std::mem::offset_of!(JSClassExoticMethods, has_property) - 16usize];
    ["Offset of field: JSClassExoticMethods::get_property"]
        [::std::mem::offset_of!(JSClassExoticMethods, get_property) - 20usize];
    ["Offset of field: JSClassExoticMethods::set_property"]
        [::std::mem::offset_of!(JSClassExoticMethods, set_property) - 24usize];
};
pub type JSClassFinalizer =
    ::std::option::Option<unsafe extern "C" fn(rt: *mut JSRuntime, val: JSValue)>;
pub type JSClassGCMark = ::std::option::Option<
    unsafe extern "C" fn(rt: *mut JSRuntime, val: JSValue, mark_func: JS_MarkFunc),
>;
pub type JSClassCall = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut JSContext,
        func_obj: JSValue,
        this_val: JSValue,
        argc: ::std::os::raw::c_int,
        argv: *mut JSValue,
        flags: ::std::os::raw::c_int,
    ) -> JSValue,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSClassDef {
    pub class_name: *const ::std::os::raw::c_char,
    pub finalizer: JSClassFinalizer,
    pub gc_mark: JSClassGCMark,
    pub call: JSClassCall,
    pub exotic: *mut JSClassExoticMethods,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSClassDef"][::std::mem::size_of::<JSClassDef>() - 20usize];
    ["Alignment of JSClassDef"][::std::mem::align_of::<JSClassDef>() - 4usize];
    ["Offset of field: JSClassDef::class_name"]
        [::std::mem::offset_of!(JSClassDef, class_name) - 0usize];
    ["Offset of field: JSClassDef::finalizer"]
        [::std::mem::offset_of!(JSClassDef, finalizer) - 4usize];
    ["Offset of field: JSClassDef::gc_mark"][::std::mem::offset_of!(JSClassDef, gc_mark) - 8usize];
    ["Offset of field: JSClassDef::call"][::std::mem::offset_of!(JSClassDef, call) - 12usize];
    ["Offset of field: JSClassDef::exotic"][::std::mem::offset_of!(JSClassDef, exotic) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSEvalOptions {
    pub version: ::std::os::raw::c_int,
    pub eval_flags: ::std::os::raw::c_int,
    pub filename: *const ::std::os::raw::c_char,
    pub line_num: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSEvalOptions"][::std::mem::size_of::<JSEvalOptions>() - 16usize];
    ["Alignment of JSEvalOptions"][::std::mem::align_of::<JSEvalOptions>() - 4usize];
    ["Offset of field: JSEvalOptions::version"]
        [::std::mem::offset_of!(JSEvalOptions, version) - 0usize];
    ["Offset of field: JSEvalOptions::eval_flags"]
        [::std::mem::offset_of!(JSEvalOptions, eval_flags) - 4usize];
    ["Offset of field: JSEvalOptions::filename"]
        [::std::mem::offset_of!(JSEvalOptions, filename) - 8usize];
    ["Offset of field: JSEvalOptions::line_num"]
        [::std::mem::offset_of!(JSEvalOptions, line_num) - 12usize];
};
unsafe extern "C" {
    pub fn JS_NewClassID(rt: *mut JSRuntime, pclass_id: *mut JSClassID) -> JSClassID;
}
unsafe extern "C" {
    pub fn JS_GetClassID(v: JSValue) -> JSClassID;
}
unsafe extern "C" {
    pub fn JS_NewClass(
        rt: *mut JSRuntime,
        class_id: JSClassID,
        class_def: *const JSClassDef,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_IsRegisteredClass(rt: *mut JSRuntime, class_id: JSClassID) -> bool;
}
unsafe extern "C" {
    pub fn JS_NewNumber(ctx: *mut JSContext, d: f64) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewBigInt64(ctx: *mut JSContext, v: i64) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewBigUint64(ctx: *mut JSContext, v: u64) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_Throw(ctx: *mut JSContext, obj: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_GetException(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_HasException(ctx: *mut JSContext) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsError(ctx: *mut JSContext, val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsUncatchableError(ctx: *mut JSContext, val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_SetUncatchableError(ctx: *mut JSContext, val: JSValue);
}
unsafe extern "C" {
    pub fn JS_ClearUncatchableError(ctx: *mut JSContext, val: JSValue);
}
unsafe extern "C" {
    pub fn JS_ResetUncatchableError(ctx: *mut JSContext);
}
unsafe extern "C" {
    pub fn JS_NewError(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowPlainError(
        ctx: *mut JSContext,
        fmt: *const ::std::os::raw::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowSyntaxError(
        ctx: *mut JSContext,
        fmt: *const ::std::os::raw::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowTypeError(
        ctx: *mut JSContext,
        fmt: *const ::std::os::raw::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowReferenceError(
        ctx: *mut JSContext,
        fmt: *const ::std::os::raw::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowRangeError(
        ctx: *mut JSContext,
        fmt: *const ::std::os::raw::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowInternalError(
        ctx: *mut JSContext,
        fmt: *const ::std::os::raw::c_char,
        ...
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ThrowOutOfMemory(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_FreeValue(ctx: *mut JSContext, v: JSValue);
}
unsafe extern "C" {
    pub fn JS_FreeValueRT(rt: *mut JSRuntime, v: JSValue);
}
unsafe extern "C" {
    pub fn JS_DupValue(ctx: *mut JSContext, v: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_DupValueRT(rt: *mut JSRuntime, v: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToBool(ctx: *mut JSContext, val: JSValue) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_ToNumber(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToInt32(ctx: *mut JSContext, pres: *mut i32, val: JSValue) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_ToInt64(ctx: *mut JSContext, pres: *mut i64, val: JSValue) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_ToIndex(ctx: *mut JSContext, plen: *mut u64, val: JSValue) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_ToFloat64(ctx: *mut JSContext, pres: *mut f64, val: JSValue)
        -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_ToBigInt64(
        ctx: *mut JSContext,
        pres: *mut i64,
        val: JSValue,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_ToBigUint64(
        ctx: *mut JSContext,
        pres: *mut u64,
        val: JSValue,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_ToInt64Ext(
        ctx: *mut JSContext,
        pres: *mut i64,
        val: JSValue,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_NewStringLen(
        ctx: *mut JSContext,
        str1: *const ::std::os::raw::c_char,
        len1: size_t,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewTwoByteString(ctx: *mut JSContext, buf: *const u16, len: size_t) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewAtomString(ctx: *mut JSContext, str_: *const ::std::os::raw::c_char) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToString(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToPropertyKey(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToCStringLen2(
        ctx: *mut JSContext,
        plen: *mut size_t,
        val1: JSValue,
        cesu8: bool,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn JS_FreeCString(ctx: *mut JSContext, ptr: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn JS_NewObjectProtoClass(
        ctx: *mut JSContext,
        proto: JSValue,
        class_id: JSClassID,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObjectClass(ctx: *mut JSContext, class_id: ::std::os::raw::c_int) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObjectProto(ctx: *mut JSContext, proto: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObject(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObjectFrom(
        ctx: *mut JSContext,
        count: ::std::os::raw::c_int,
        props: *const JSAtom,
        values: *const JSValue,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewObjectFromStr(
        ctx: *mut JSContext,
        count: ::std::os::raw::c_int,
        props: *mut *const ::std::os::raw::c_char,
        values: *const JSValue,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToObject(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_ToObjectString(ctx: *mut JSContext, val: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_IsFunction(ctx: *mut JSContext, val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsConstructor(ctx: *mut JSContext, val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_SetConstructorBit(ctx: *mut JSContext, func_obj: JSValue, val: bool) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsRegExp(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsMap(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_NewArray(ctx: *mut JSContext) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewArrayFrom(
        ctx: *mut JSContext,
        count: ::std::os::raw::c_int,
        values: *const JSValue,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_IsArray(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_IsProxy(val: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_GetProxyTarget(ctx: *mut JSContext, proxy: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_GetProxyHandler(ctx: *mut JSContext, proxy: JSValue) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_NewDate(ctx: *mut JSContext, epoch_ms: f64) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_IsDate(v: JSValue) -> bool;
}
unsafe extern "C" {
    pub fn JS_GetProperty(ctx: *mut JSContext, this_obj: JSValue, prop: JSAtom) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_GetPropertyUint32(ctx: *mut JSContext, this_obj: JSValue, idx: u32) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_GetPropertyInt64(ctx: *mut JSContext, this_obj: JSValue, idx: i64) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_GetPropertyStr(
        ctx: *mut JSContext,
        this_obj: JSValue,
        prop: *const ::std::os::raw::c_char,
    ) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_SetProperty(
        ctx: *mut JSContext,
        this_obj: JSValue,
        prop: JSAtom,
        val: JSValue,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_SetPropertyUint32(
        ctx: *mut JSContext,
        this_obj: JSValue,
        idx: u32,
        val: JSValue,
    ) -> ::std::os::raw::c_int;
}
